src-tauri/src/core/snapshots/kite_lib__core__stage__tests__stage_lines_patch_generation.snap
---
source: src/core/stage.rs
expression: patch
---
diff --git a/test.txt b/test.txt
--- a/test.txt
+++ b/test.txt
@@ -1,5 +1,6 @@
 line 1
 line 2
+new line 3
 line 3
 line 4
 line 5
